# cleaning-app

./: .flaskenv  .gitignore  README.md  SQUAREUP.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
app/: __init__.py  config.py  constants.py  extensions.py  init_db.py  passenger_wsgi.py  utils.py
app/helpers/: auth_utils.py  generate_availability.py
app/models/: accounts.py  bookings.py  clients.py  email.py  services.py
app/services/: booking_service.py  notification_service.py
app/static/css/: animation.css  dashboard.css  new-output.css  output.css  primary.css  signin.css
app/static/js/: app.js  booking-calendar.js  bookingAvailability.js  clientData.js  dateParser.js  eventHandlers.js  main.js  script.js  square-payments.js  test-time.js  toast-notification.js  validators.js
app/static/lottie/: payment-successful.lottie
app/templates/: index.html  invalid-booking.html  sqaure-payments-bkp.html  square-payments.html
app/templates/accounts/: base_dashboard.html  dashboard.html  signin.html
app/templates/components/: guest-booking-header.html  header.html  loading-modal.html  sidebar.html
app/templates/email/: confirmed-booking.html
app/views/: __init__.py  auth.py  booking.py  dashboard.py  payments.py  serializers.py
cron_jobs/: send_mail.py
glimmr-lite-prototype/: index.html
glimmr-lite-prototype/src/: App.tsx  index.css
migrations/: env.py
migrations/versions/: 2753520db5b8_app_initial_migrations.py
sql/: add-columns-to-table.sql  backup-table.sql  rename-table.sql
(+8 files in other folders)
